2010-09-26  Gary V. Vaughan  <gary@gnu.org>

	tests: remove unused `aux_dir' variable from `getopt-m4sh.test'.
	* tests/getopt-m4sh.at (aux_dir): Remove unused variable.

2010-09-26  Gary V. Vaughan  <gary@gnu.org>

	tests: DRYing out `tests/sh.test'.
	* Makefile.am (libtool_m4): Canonical location of libtool.m4 file.
	(lt_aclocal_m4_deps): Use it.

2010-09-23  Gary V. Vaughan  <gary@gnu.org>

	maint: pass directory declarations in configure.ac into Makefile.
	* configure.ac (AC_CONFIG_AUX_DIR, LT_CONFIG_LTDL_DIR)
	(AC_CONFIG_MACRO_DIR): Append code to these functions to
	capture and propagate their directory arguments to Makefile.
	* Makefile.am (aux_dir, ltdl_dir, macro_dir): Remove declarations.
	* bootstrap (my_sed_trace): Also capture LT_CONFIG_LTDL_DIR into
	`$ltdl_dir'.
	<Makefile>: Output the extracted values of `aux_dir', `ltdl_dir'
	and `macro_dir' at the top of the quick'n'dirty bootstrap
	Makefile.

2010-09-26  Gary V. Vaughan  <gary@gnu.org>

	maint: factor out ltmain.sh variable deletion.
	* Makefile.am (ltmain_sh_edit): Expand upon bootstrap edit by
	adding the extra line to delete boilerplate variable settings
	from libltdl/config/general.m4sh that don't apply here.
	(libltdl/config/ltmain.sh): Use it.

2010-09-25  Gary V. Vaughan  <gary@gnu.org>

	maint: DRYing out `Makefile.am' file paths.
	* Makefile.am (aux_dir, macro_dir): Include `$(srcdir)' in
	declaration. Adjust all references.
	(doc_dir, ltdl_dir, m4sh_dir, tests_dir): New single location
	to hold directory paths, all including `$(srcdir)', to reduce
	typing.
	(LT_M4SH): Use `$m4sh_dir' as include directory.
	(defs): This one is for a file in the build-tree, so no
	leading `$(srcdir)'.

2010-09-25  Gary V. Vaughan  <gary@gnu.org>

	CLEANUP: fix error from pushing too far up the branch.
	* Makefile.am (install-data-local): Undo character transposition
	from too early push of untested v2.4-17-gaf74d58.

2010-09-23  Gary V. Vaughan  <gary@gnu.org>
